# debate_agent

./: pyproject.toml
debate_agent/: component.yaml  run.py  schemas.py
debate_agent/configs/: agent_deploymnets.json
